# paper_helper

./: .dockerignore  .env.example  .gitignore  CONFIG_GUIDE.md  Dockerfile  MIGRATION_NOTES.md  PROJECT_STRUCTURE.md  README.md  docker-compose.yml  env.example  langgraph.json  package-lock.json  package.json  paper-helper.code-workspace  pyproject.toml  render.yaml  start.ps1  stop.ps1  test_escape.py
.github/workflows/: main.yml
.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl
frontend/: .prettierrc.json  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vite.config_local.ts
frontend/src/: App.tsx  index.css  main.tsx  routes.tsx  types.tsx
old_server/: chat.js  package-lock.json  package.json
server/: PROJECT_STRUCTURE.md  __init__.py  agent_graph.py  chat-mcp.js  chunk.py  config.py  database.py  delete_papers.py  embed.py  fix_existing_papers.py  main.py  mcp-server.js  parse.py  requirements.txt  retrieve.py  run_server.py  run_weekly_report.py  server.js
server/chat_agents/: agent_graph.py
server/chatbox/: main.py
server/managers/: __init__.py  file_manager.py  storage_manager.py
server/models/: __init__.py  paper.py  report.py  session.py
server/outdated/: chunk.py  embed.py  parse.py
server/report_pipeline/: __init__.py  download_and_parse_references.py  download_pipeline.py  ingest_pipeline.py  send_email_pipeline.py  weekly_report_agent.py
server/tests/: README_TESTS.md  __init__.py  agent_memory_test.py  recentrunlog  (+9 more)
src/: App.js
(+56 files in other folders)
